--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Painel - MaisQueCafe</title>
-  <link rel="stylesheet" href="../Painel de pedidos/styles/style.css">
+  <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
   <header>
@@ -167,4 +167,5 @@
 
   <script src="../Painel de pedidos/script/script.js"></script>
 </body>
+
 </html>
