--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Painel - MaisQueCafe</title>
-  <link rel="stylesheet" href="/styles/style.css">
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
   <header>
@@ -165,8 +165,9 @@
     </section>
   </main>
 
-  <script src="/script/script.js"></script>
+  <script src="script/script.js"></script>
 </body>
 
 </html>
+
 
