--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>MaisQueCafe • Painel • <a href="pedidos.html"> Página de pedidos</a></h1>
+    <h1>MaisQueCafe • Painel • <a href="OrderPage/pedidos.html"> Página de pedidos</a></h1>
     <div class="row">
       <input id="base" value="http://127.0.0.1:8000" title="URL da API">
       <input id="key" value="dev-123" title="x-api-key">
@@ -169,6 +169,7 @@
 </body>
 
 </html>
+
 
 
 
